# AndroidNativePdfium

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
